--- a/index.html
+++ b/index.html
@@ -3,61 +3,78 @@
     <meta />
     <meta />
     <title>Document</title>
+    <script src="https://cdn.tailwindcss.com"></script>
+    <link
+      href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:ital,wght@0,200..800;1,200..800&display=swap"
+      rel="stylesheet"
+    />
   </head>
 
-  <body>
+  <body class="flex flex-col lg:flex-row min-h-screen bg-gray-100 text-black font-jakarta">
     <!-- Navigation Sidebar: Contains the logo, navigation links for boards, and theme toggle. -->
-    <nav>
-      <div>
-        <h4>ALL BOARDS (1)</h4>
-        <button>Launch Career</button>
+    <nav class="bg-white w-full lg:w-64 h-20 lg:h-screen shadow-md flex-shrink-0">
+      <div class="flex flex-row lg:flex-col items-center lg:justify-start lg:mt-4 px-4 h-full">
+
+        <!-- Logo Section -->
+      <div class="flex justify-between gap-1 lg:mb-2">
+        <span class="w-2 h-8 bg-purple-500 rounded-sm"></span>
+        <span class="w-2 h-8 bg-purple-400 rounded-sm"></span>
+        <span class="w-2 h-8 bg-purple-300 rounded-sm"></span>
+        <span class="font-bold text-3xl text-black tracking-wide">kanban</span>
+      </div>
+    
+        <!-- Boards Section -->
+        <h4 class="hidden lg:block text-xs text-gray-400 tracking-wider font-medium mt-4 mx-4">ALL BOARDS (1)</h4>
+        <button class="hidden lg:block bg-purple-600 rounded-tr-full rounded-br-full text-white text-xs font-medium whitespace-nowrap px-6 py-2 lg:px-20 lg:py-4 mt-2 lg:mt-4 mr-4">Launch Career</button>
       </div>
     </nav>
 
     <!-- Main Layout: Header with board title, add task button, and main content area for task columns. -->
-    <div>
-      <header>
+    <div class="flex flex-col w-full">
+      <header class="hidden lg:block bg-white shadow-md h-16 text-lg font-bold lg:flex lg:items-center px-6 tracking-wide">
         <div>
           <h2>Launch Career</h2>
         </div>
       </header>
 
       <div>
-        <main>
+        <main class="flex flex-col lg:flex-row gap-1 font-bold">
           <!-- Task Columns: Display tasks grouped by status (TODO, DOING, DONE). -->
-          <div>
-            <div>
-              <span></span>
-              <h4>TODO</h4>
+          <div class="w-full lg:w-1/3 text-sm p-6">
+            <div class="flex items-center gap-2">
+              <span class="inline-block w-3 h-3 bg-sky-500 rounded-full mb-4"></span>
+              <h4 class="text-gray-400 text-sm font-medium tracking-wider mb-4">TODO (4)</h4>
             </div>
             <!-- Tasks container for TODO -->
             <div>
-              <div>Launch Epic Career 🚀</div>
-              <div>Learn Data Structures and Algorithms 📚</div>
+              <div class="bg-white rounded-lg shadow-md py-4 px-4 mb-4">Launch Epic Career 🚀</div>
+              <div class="bg-white rounded-lg shadow-md py-4 px-4 mb-4">Conquer React ⚛️</div>
+              <div class="bg-white rounded-lg shadow-md py-4 px-4 mb-4">Understand Databases ⚙️</div>
+              <div class="bg-white rounded-lg shadow-md py-4 px-4 mb-4">Crush Frameworks 🧱</div>
             </div>
           </div>
           <!-- DOING Column -->
-          <div>
-            <div>
-              <span></span>
-              <h4>DOING</h4>
+          <div class="w-full lg:w-1/3 text-sm p-6">
+            <div class="flex items-center gap-2">
+              <span class="inline-block w-3 h-3 bg-purple-500 rounded-full mb-4"></span>
+              <h4 class="text-gray-400 text-sm font-medium tracking-wider mb-4">DOING (2)</h4>
             </div>
             <!-- Tasks container for DOING -->
             <div>
-              <div>Master JavaScript 💛</div>
-              <div>Keep on Going 🏆</div>
+              <div class="bg-white rounded-lg shadow-md py-4 px-4 mb-4">Master JavaScript 💛</div>
+              <div class="bg-white rounded-lg shadow-md py-4 px-4">Keep on Going 🏆</div>
             </div>
           </div>
           <!-- DONE Column -->
-          <div>
-            <div>
-              <span></span>
-              <h4>DONE</h4>
+          <div class="w-full lg:w-1/3 text-sm p-6">
+            <div class="flex items-center gap-2">
+              <span class="inline-block w-3 h-3 bg-emerald-500 rounded-full mb-4"></span>
+              <h4 class="text-gray-400 text-sm font-medium tracking-wider mb-4">DONE (2)</h4>
             </div>
             <!-- Tasks container for DONE -->
             <div>
-              <div>Contribute to Open Source Projects 🌐</div>
-              <div>Build Portfolio Projects 🛠️</div>
+              <div class="bg-white rounded-lg shadow-md py-4 px-4 mb-4">Contribute to Open Source Projects 🌐</div>
+              <div class="bg-white rounded-lg shadow-md py-4 px-4">Build Portfolio Projects 🛠️</div>
             </div>
           </div>
         </main>
