Update meta tags and fix kanban span formatting
Added charset and viewport meta tags for better compatibility and responsiveness. Fixed formatting of the 'kanban' span element for improved readability.

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
   <head>
-    <meta />
-    <meta />
+    <meta charset="UTF-8" />
+    <meta name="viewpoint" content="width=device-width, initial scale=1.0" />
     <title>Document</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link
@@ -25,9 +25,7 @@
           <span class="w-2 h-7 bg-purple-500 rounded-sm"></span>
           <span class="w-2 h-7 bg-purple-400 rounded-sm"></span>
           <span class="w-2 h-7 bg-purple-300 rounded-sm"></span>
-          <span class="font-bold text-2xl text-black tracking-wide"
-            >kanban</span
-          >
+          <span class="font-bold text-2xl text-black tracking-wide">kanban</span>
         </div>
 
         <!-- Boards Section -->
