--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <html>
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewpoint" content="width=device-width, initial scale=1.0" />
-    <title>Document</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Kanban Board</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link
       href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:ital,wght@0,200..800;1,200..800&display=swap"
@@ -22,16 +22,12 @@
       >
         <!-- Logo Section -->
         <div class="flex justify-between gap-1 lg:mb-2">
-          <span class="w-2 h-7 bg-purple-500 rounded-sm"></span>
-          <span class="w-2 h-7 bg-purple-400 rounded-sm"></span>
-          <span class="w-2 h-7 bg-purple-300 rounded-sm"></span>
-          <span class="font-bold text-2xl text-black tracking-wide">kanban</span>
+          <img src="assets/logo-light.svg" alt="Kanban logo" class="h-8 w-22 lg:h-10 lg:w-22" />
         </div>
 
         <!-- Boards Section -->
         <h4
-          class="hidden lg:block text-xs text-gray-400 tracking-wider font-medium mt-4 mx-4"
-        >
+          class="hidden lg:block text-xs text-gray-400 tracking-wider font-medium mt-4"> <!--hidden on smaller screens, occupy the full available width on large screens-->
           ALL BOARDS (1)
         </h4>
         <button
@@ -58,8 +54,7 @@
           <div class="w-full lg:w-1/3 text-sm p-6">
             <div class="flex items-center gap-2">
               <span
-                class="inline-block w-3 h-3 bg-sky-500 rounded-full mb-4"
-              ></span>
+                class="inline-block w-3 h-3 bg-sky-500 rounded-full mb-4" ></span> <!--elements flow alongside other contents on the same line-->
               <h4 class="text-gray-400 text-sm font-medium tracking-wider mb-4">
                 TODO (4)
               </h4>
